tests/fixtures/valid/boolean_logic.airl
;; EXPECT: true
(or (and true false) (not false))
