tests/fixtures/type_errors/builtin_even_type.airl
;; ERROR: type mismatch
;; even? expects Int, not Bool
(even? true)
